# calc-cli

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  parsing.cpp  parsing.hpp
